--- a/explore.html
+++ b/explore.html
@@ -231,14 +231,14 @@
           <div class="center-text">
             <h2>For researchers</h2>
           </div>
-          <figure class="iandt">
-            <div class="image">
+          <div class="iandt">
+            <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers1-min.jpg"
                 alt="Picture of a human model with internal organs showing"
               />
-            </div>
-            <figcaption class="text">
+            </figure>
+            <div class="text">
               <p>
                 Are you looking to get involved with our team of researchers and
                 academics? Our museum offers various ways for you to use our
@@ -246,14 +246,14 @@
                 laboratory space, and a working relationship with a number of
                 universities around the country.
               </p>
-            </figcaption>
-            <div class="image">
+            </div>
+            <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers2-min.jpg"
                 alt="Picture of a model of a human heart"
               />
-            </div>
-          </figure>
+            </figure>
+          </div>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
