--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           making science accessible to all.
         </h3>
         <figure class="container">
-          <figure class="image">
+          <figure class="image boy-in-museum">
             <img
               src="Images/Home/home_boy-in-museum-min.jpg"
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
