--- a/exhibition.html
+++ b/exhibition.html
@@ -120,7 +120,7 @@
           />
           <h2>Evolution</h2>
         </figure>
-        <figure class="container iandt">
+        <figure class="iandt">
           <div class="textfield-dark-green evot">
             <p>
               For centuries, philosophers and scientists have wrestled with the
