--- a/explore.html
+++ b/explore.html
@@ -203,7 +203,7 @@
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
           </figure>
-          <figcaption class="textfield-grey">
+          <figcaption class="textfield-grey for-teachers">
             <p>
               As a community-driven museum, we want to work with schools to
               create places of learning and exploring. Our team are on hand to
