--- a/explore.html
+++ b/explore.html
@@ -179,7 +179,8 @@
                 <p>
                   Each holiday we pick a new theme to explore. To find out more
                   about the holiday club and how you can join,
-                  <a href="visit.html">send us a message</a>.
+                  <strong><a href="visit.html">send us a message</a></strong
+                  >.
                 </p>
               </figcaption>
             </figure>
@@ -213,9 +214,9 @@
             </p>
             <p>
               Please get in touch with us
-              <a href="visit.html">here</a> to find out more about our
-              facilities and to arrange a time to bring your students through
-              for a visit.
+              <strong><a href="visit.html">here</a></strong> to find out more
+              about our facilities and to arrange a time to bring your students
+              through for a visit.
             </p>
           </figcaption>
         </figure>
