--- a/explore.html
+++ b/explore.html
@@ -179,7 +179,7 @@
                 <p>
                   Each holiday we pick a new theme to explore. To find out more
                   about the holiday club and how you can join,
-                  <strong><a href="visit.html">send us a message</a></strong
+                  <strong><a href="contact.html">send us a message</a></strong
                   >.
                 </p>
               </figcaption>
@@ -214,7 +214,7 @@
             </p>
             <p>
               Please get in touch with us
-              <strong><a href="visit.html">here</a></strong> to find out more
+              <strong><a href="contact.html">here</a></strong> to find out more
               about our facilities and to arrange a time to bring your students
               through for a visit.
             </p>
