--- a/visit.html
+++ b/visit.html
@@ -160,78 +160,9 @@
         <h3 class="center-text">
           Please contact us if you have any questions or feedback
         </h3>
-        <form method="GET">
-          <div class="contact-form">
-            <div class="fieldset">
-              <label for="name">Name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                placeholder="Ola Nordmann"
-                required
-              />
-              <label for="phone">Phone number</label>
-              <input
-                type="tel"
-                name="phone"
-                id="phone"
-                class="form-input"
-                placeholder="+47 987 65 432"
-                required
-              />
-              <label for="email">Email</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="form-input"
-                placeholder="test@mail.com"
-                required
-              />
-              <label for="reason-for-contact">Reason for contact</label>
-              <select
-                name="reason-for-contact"
-                id="reason-for-contact"
-                class="form-input"
-              >
-                <option value="option-1">...</option>
-                <option value="option-2">
-                  I have a questions about one of your exhibitions
-                </option>
-                <option value="option-3">
-                  I have feedback regarding a tour
-                </option>
-                <option value="option-4">I want to book a class tour</option>
-                <option value="option-5">Other</option>
-              </select>
-              <label for="newsletter"
-                >Would you like to sign up for our newsletter?</label
-              >
-              <input
-                type="checkbox"
-                name="newsletter"
-                id="newsletter"
-                class="form-input newsletter"
-                checked
-              />
-            </div>
-            <div class="fieldset">
-              <label for="message">Write us a message</label>
-              <textarea
-                id="message"
-                name="message"
-                cols="30"
-                rows="10"
-                class="form-input"
-              ></textarea>
-            </div>
-          </div>
-          <div class="form-button">
-            <input type="submit" value="Submit" class="cta form-cta" />
-          </div>
-        </form>
+        <div class="visit-cta">
+          <a href="contact.html" class="cta">Send us a message</a>
+        </div>
       </div>
       <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
