--- a/events.html
+++ b/events.html
@@ -148,7 +148,9 @@
       <div class="wrapper">
         <section class="footer-content">
           <div class="contact-info">
-            <h2>Contact</h2>
+            <a href="contact.html" class="footer-contact-link">
+              <h2>Contact</h2>
+            </a>
             <div class="footer-contact-icon">
               <img src="Images/Icons/telephone-icon.png" alt="Telephone icon" />
               <p>+47 987 65 432</p>
