--- a/visit.html
+++ b/visit.html
@@ -155,7 +155,7 @@
             src="Images/Design/Contact-Skille.png"
             alt="Divider with a contact icon"
           />
-          <h2>Contact</h2>
+          <h2>Contact Us</h2>
         </figure>
         <h3 class="center-text">
           Please contact us if you have any questions or feedback
@@ -177,7 +177,9 @@
       <div class="wrapper">
         <section class="footer-content">
           <div class="contact-info">
-            <h2>Contact</h2>
+            <a href="contact.html" class="footer-contact-link">
+              <h2>Contact</h2>
+            </a>
             <div class="footer-contact-icon">
               <img src="Images/Icons/telephone-icon.png" alt="Telephone icon" />
               <p>+47 987 65 432</p>
