--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
               <li><a href="explore.html">Explore</a></li>
               <li><a href="exhibition.html">Exhibitions</a></li>
               <li><a href="events.html">Events</a></li>
-              <li><a href="visit.html" id="active">Visit</a></li>
+              <li><a href="visit.html">Visit</a></li>
               <li><a href="getinvolved.html">Get Involved</a></li>
             </ul>
           </nav>
@@ -71,11 +71,11 @@
       </div>
       <h1 tabindex="0">Contact</h1>
       <div class="wrapper">
-        <h3 class="center-text">
+        <h2 class="center-text contact-h2">
           Do you have any questions or feedback? Do you want to book a guided
           tour for a class or just a friendly gathering? Please sendt us a
           message.
-        </h3>
+        </h2>
         <form method="GET">
           <div class="contact-form">
             <div class="fieldset">
