--- a/explore.html
+++ b/explore.html
@@ -213,10 +213,12 @@
               will excite and inspire them.
             </p>
             <p>
-              Please get in touch with us
-              <strong><a href="contact.html">here</a></strong> to find out more
-              about our facilities and to arrange a time to bring your students
-              through for a visit.
+              Please
+              <strong
+                ><a href="contact.html"> get in touch with us here</a></strong
+              >
+              to find out more about our facilities and to arrange a time to
+              bring your students through for a visit.
             </p>
           </figcaption>
         </figure>
