--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="explore.html">
               <img
                 src="Images/Home/home_explore-min.jpg"
-                alt="Image of a child with VR glasses. Click the image to go to the Explore page."
+                alt="Image of a child with VR glasses."
               />
             </a>
             <a href="explore.html" class="cta">Find out more</a>
@@ -110,7 +110,7 @@
             <a href="exhibition.html">
               <img
                 src="Images/Home/home_exhibitions-min.jpg"
-                alt="Image of on of our great exhibitions in the museum. Click the image to go to the exhibitions page."
+                alt="Image of on of our great exhibitions in the museum."
               />
             </a>
             <a href="exhibition.html" class="cta">Find out more</a>
@@ -120,7 +120,7 @@
             <a href="events.html">
               <img
                 src="Images/Home/home_events-min.jpg"
-                alt="Image of a man standing in front of a large museum room. Click the image to go to the Events page."
+                alt="Image of a man standing in front of a large museum room."
               />
             </a>
             <a href="events.html" class="cta">Find out more</a>
@@ -130,7 +130,7 @@
             <a href="visit.html">
               <img
                 src="Images/Home/home_visit-min.jpg"
-                alt="Image of ceiling art from one of the museum's halls. Click the image to go to the Visit page."
+                alt="Image of ceiling art from one of the museum's halls."
               />
             </a>
             <a href="visit.html" class="cta">Find out more</a>
