--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <a href="explore.html">
               <img
                 src="Images/Home/home_explore-min.jpg"
-                alt="Image of a child with VR glasses."
+                alt="Child wearing VR glasses exploring a virtual reality world."
               />
             </a>
             <a href="explore.html" class="cta">Find out more</a>
