--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <a href="exhibition.html">
               <img
                 src="Images/Home/home_exhibitions-min.jpg"
-                alt="Image of on of our great exhibitions in the museum."
+                alt="Our time and space exhibition seen from the entrance area."
               />
             </a>
             <a href="exhibition.html" class="cta">Find out more</a>
@@ -120,7 +120,7 @@
             <a href="events.html">
               <img
                 src="Images/Home/home_events-min.jpg"
-                alt="Image of a man standing in front of a large museum room."
+                alt="A man standing on a balcony looking out over one of our exhibitions."
               />
             </a>
             <a href="events.html" class="cta">Find out more</a>
@@ -130,7 +130,7 @@
             <a href="visit.html">
               <img
                 src="Images/Home/home_visit-min.jpg"
-                alt="Image of ceiling art from one of the museum's halls."
+                alt="Ceiling art from one of the museum's halls."
               />
             </a>
             <a href="visit.html" class="cta">Find out more</a>
